2012-04-25  frellsen  <frellsen@binf>

	* muninn/Factories/CGEfactory.h: Added the setting
	read_fixed_weights_filename.

	* muninn/Factories/CGEfactory.cpp: Added functionality for setting
	up a fixed weight scheme.

	* muninn/WeightSchemes/FixedWeights.h: Added a weight scheme that
	can fix the weight in a given set of bins.

	* muninn/WeightSchemes/LinearPolatedInvK.h: Adjusted to match
	changes to LinearPolatedWeights.h.

	* muninn/WeightSchemes/LinearPolatedMulticanonical.h: Adjusted to
	match changes to LinearPolatedWeights.h.

	* muninn/WeightSchemes/LinearPolatedWeights.h: Changed
	underlying_weight_scheme (in constructor and as member variable)
	from a reference to a pointer. Added variable receives_ownership
	to constructor and has_ownership as a member variable.

	* muninn/WeightSchemes/LinearPolatedWeights.cpp: Adjusted
	according to changes in header.

2012-04-02  Jes Frellsen  <frellsen@binf>

	* bin/examples/normal.cpp: Added the log_mode option.

	* muninn/CGE.h: One of the constructors now takes an Estimate as
	an argument rather than values for lnG and lnG_support.

	* muninn/Estimator.h: The function Estimator::new_estimate with
	lnG and lnG_support arguments were removed from the interface.

	* muninn/GE.h: One of the constructors now takes an Estimate as an
	argument rather than values for lnG and lnG_support.

	* muninn/UpdateScheme.h: Added function add_statistics_to_log to
	implement the Loggable interface.
	
	* muninn/Factories/CGEfactory.h: Added the setting log_precision
	and stream operators for StatisticsLogger::Mode.

	* muninn/Factories/CGEfactory.cpp: Adapted the factory to use the
	new values written in log files and the new MLE::new_estimate
	function.

	* muninn/MLE/MLE.h: Changed the prototype for the
	MLE::new_estimate function.
	
	* muninn/MLE/MLE.cpp: The MLE::new_estimate function now
	constructs a new estimated based on also a value of x0 and values
	for the free energies.
	